Fixed using DOM only - Look into Grid Layout Shift

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -628,9 +628,19 @@ html {
     padding: 1.2em;
   }
 }
+#ImageContainerB {
+  display: none;
+}
+
 @media screen and (max-width: 850px) {
   #ProjectSection .Project-Image {
     max-height: 375px;
+  }
+  #ProjectSection #ImageContainer {
+    display: none;
+  }
+  #ProjectSection #ImageContainerB {
+    display: block;
   }
 }
 .TechStack-Title {
